bk_ida/gccida/c0/node_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/node_data/src/graph.c:602:22: error: use of undeclared identifier 'unk_80265E'
v5 = ( const char *)&unk_80265E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/node_data/src/graph.c:608:22: error: use of undeclared identifier 'unk_80265E'
v4 = ( const char *)&unk_80265E; 
                     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/node_data/src/graph.c:635:9: error: use of undeclared identifier 'arg0'
name = &arg0; 
        ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/node_data/src/obj/graph.o] Error 1
